; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/musb/extr_musb_gadget.c_musb_gadget_setup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/musb/extr_musb_gadget.c_musb_gadget_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.musb = type { %struct.TYPE_7__, i32, i64, i32, %struct.TYPE_6__* }
%struct.TYPE_7__ = type { %struct.TYPE_8__, i64, i32, i32, i32, i32* }
%struct.TYPE_8__ = type { i32* }
%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

@musb_gadget_operations = common dso_local global i32 0, align 4
@USB_SPEED_HIGH = common dso_local global i32 0, align 4
@USB_SPEED_UNKNOWN = common dso_local global i32 0, align 4
@OTG_STATE_B_IDLE = common dso_local global i32 0, align 4
@musb_driver_name = common dso_local global i32 0, align 4
@musb_gadget_work = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @musb_gadget_setup(%struct.musb* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.musb*, align 8
  %4 = alloca i32, align 4
  store %struct.musb* %0, %struct.musb** %3, align 8
  %5 = load %struct.musb*, %struct.musb** %3, align 8
  %6 = getelementptr inbounds %struct.musb, %struct.musb* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 5
  store i32* @musb_gadget_operations, i32** %7, align 8
  %8 = load i32, i32* @USB_SPEED_HIGH, align 4
  %9 = load %struct.musb*, %struct.musb** %3, align 8
  %10 = getelementptr inbounds %struct.musb, %struct.musb* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 4
  store i32 %8, i32* %11, align 8
  %12 = load i32, i32* @USB_SPEED_UNKNOWN, align 4
  %13 = load %struct.musb*, %struct.musb** %3, align 8
  %14 = getelementptr inbounds %struct.musb, %struct.musb* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 3
  store i32 %12, i32* %15, align 4
  %16 = load %struct.musb*, %struct.musb** %3, align 8
  %17 = call i32 @MUSB_DEV_MODE(%struct.musb* %16)
  %18 = load i32, i32* @OTG_STATE_B_IDLE, align 4
  %19 = load %struct.musb*, %struct.musb** %3, align 8
  %20 = getelementptr inbounds %struct.musb, %struct.musb* %19, i32 0, i32 4
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  store i32 %18, i32* %24, align 4
  %25 = load i32, i32* @musb_driver_name, align 4
  %26 = load %struct.musb*, %struct.musb** %3, align 8
  %27 = getelementptr inbounds %struct.musb, %struct.musb* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 2
  store i32 %25, i32* %28, align 8
  %29 = load %struct.musb*, %struct.musb** %3, align 8
  %30 = getelementptr inbounds %struct.musb, %struct.musb* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %30, i32 0, i32 1
  store i64 0, i64* %31, align 8
  %32 = load %struct.musb*, %struct.musb** %3, align 8
  %33 = getelementptr inbounds %struct.musb, %struct.musb* %32, i32 0, i32 3
  %34 = load i32, i32* @musb_gadget_work, align 4
  %35 = call i32 @INIT_DELAYED_WORK(i32* %33, i32 %34)
  %36 = load %struct.musb*, %struct.musb** %3, align 8
  %37 = call i32 @musb_g_init_endpoints(%struct.musb* %36)
  %38 = load %struct.musb*, %struct.musb** %3, align 8
  %39 = getelementptr inbounds %struct.musb, %struct.musb* %38, i32 0, i32 2
  store i64 0, i64* %39, align 8
  %40 = load %struct.musb*, %struct.musb** %3, align 8
  %41 = call i32 @musb_platform_try_idle(%struct.musb* %40, i32 0)
  %42 = load %struct.musb*, %struct.musb** %3, align 8
  %43 = getelementptr inbounds %struct.musb, %struct.musb* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 8
  %45 = load %struct.musb*, %struct.musb** %3, align 8
  %46 = getelementptr inbounds %struct.musb, %struct.musb* %45, i32 0, i32 0
  %47 = call i32 @usb_add_gadget_udc(i32 %44, %struct.TYPE_7__* %46)
  store i32 %47, i32* %4, align 4
  %48 = load i32, i32* %4, align 4
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %50, label %51

50:                                               ; preds = %1
  br label %52

51:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %62

52:                                               ; preds = %50
  %53 = load %struct.musb*, %struct.musb** %3, align 8
  %54 = getelementptr inbounds %struct.musb, %struct.musb* %53, i32 0, i32 0
  %55 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %54, i32 0, i32 0
  %56 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %55, i32 0, i32 0
  store i32* null, i32** %56, align 8
  %57 = load %struct.musb*, %struct.musb** %3, align 8
  %58 = getelementptr inbounds %struct.musb, %struct.musb* %57, i32 0, i32 0
  %59 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %58, i32 0, i32 0
  %60 = call i32 @device_unregister(%struct.TYPE_8__* %59)
  %61 = load i32, i32* %4, align 4
  store i32 %61, i32* %2, align 4
  br label %62

62:                                               ; preds = %52, %51
  %63 = load i32, i32* %2, align 4
  ret i32 %63
}

declare dso_local i32 @MUSB_DEV_MODE(%struct.musb*) #1

declare dso_local i32 @INIT_DELAYED_WORK(i32*, i32) #1

declare dso_local i32 @musb_g_init_endpoints(%struct.musb*) #1

declare dso_local i32 @musb_platform_try_idle(%struct.musb*, i32) #1

declare dso_local i32 @usb_add_gadget_udc(i32, %struct.TYPE_7__*) #1

declare dso_local i32 @device_unregister(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
